<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateStoryActivity"
    android:background="@color/colorPrimaryDark">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/all_create_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/take_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/take_photo"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:id="@+id/upload_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/add_photo"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:id="@+id/upload_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_videocam_black_48dp2"
                style="?android:attr/borderlessButtonStyle"
                />
        </LinearLayout>

        <Spinner
            android:id="@+id/filter_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:prompt="@string/spinner_title"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title_create_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_title_post"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_create_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_description_post"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginLeft="5dp"
                android:text="Privacity: "/>
            <RadioGroup
                android:id="@+id/radio_privacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">
                <RadioButton
                    android:id="@+id/public_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="Public"/>
                <RadioButton
                    android:id="@+id/private_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="Private"/>
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/publish_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Publish"
                android:background="@color/colorAccent"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
<ProgressBar
    android:id="@+id/post_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="match_parent"
    android:paddingTop="80dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone"
    />
</android.support.constraint.ConstraintLayout>